Fixed CSS where seller overflows and destroyes the display

--- a/staticfiles/css/search.css
+++ b/staticfiles/css/search.css
@@ -8,6 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: auto;
+    scroll-snap-type: x proximity;
 }
 
 .seller {
@@ -21,6 +23,7 @@
     margin: 15px;
     padding: 10px;
     width: max-content;
+    scroll-snap-align: center;
 }
 
 .seller-profile {
